# helix

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  config.secrets.example.yaml  config.yaml  pyproject.toml
arxo/: __init__.py  cli.py  config.py  index.py  init.py  models.py  notes.py  repro.py
arxo/sources/: arxiv.py  dblp.py  fulltext.py  mineru_client.py  semantic_scholar.py
docs/: literature-review.md  reproduce-deepcode-design.md  reproduce-sync.md
helix/: __init__.py  cli.py  config.py  frontmatter.py  index.py  init.py  migrate.py  models.py  naming.py  notes.py  pipeline.py  repro.py  review.py  score.py  secrets.py  ssh.py  sync.py  vcs.py
helix/adapters/: __init__.py  arxiv.py  dblp.py  fulltext.py  mineru_client.py  semantic_scholar.py
helix/sources/: __init__.py  arxiv.py  dblp.py  fulltext.py  mineru_client.py  semantic_scholar.py
skills/arxo/: SKILL.md
skills/daily/: SKILL.md
skills/deep-read/: SKILL.md
skills/helix/: SKILL.md
skills/reproduce/: SKILL.md
skills/reproduce/references/: hypothesis-to-plan.md  paper-to-setup.md  plan-to-code.md  result-to-claim.md  run-monitor-analyze.md  setup-to-plan.md
skills/review/: SKILL.md
skills/search/: SKILL.md
tests/: test_adapters.py  test_cli_remote_start.py  test_config.py  test_frontmatter.py  test_fulltext.py  test_index.py  test_init.py  test_migrate.py  test_naming.py  test_notes.py  test_pipeline.py  test_repro.py  test_review.py  test_score.py  test_secrets.py  test_sources.py  test_ssh.py  test_sync.py  test_vcs.py
